[package]
name = "common"
version = "0.6.0"
edition = "2021"
license = "MIT"

[dependencies]
jsonwebtoken = "9"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
async-nats = "0.37"
init-tracing-opentelemetry = { version = "0.38", features = ["otlp", "tracing_subscriber_ext"] }
